--- a/style.css
+++ b/style.css
@@ -564,3 +564,40 @@ background-color: #0056b3 !important;
   transform: scale(1);
 }
 
+.doctor-info{
+  margin-top:150px; padding-top: 70px 
+    
+;
+}
+.dr-img{
+ width: 200px;
+ height: 200px; 
+}
+
+.doctor-photo{
+  height: 200px;
+  width: 200px;
+  border-radius: 50%; /* يجعلها دائرية */
+  overflow: hidden;
+  border: 5px solid #0b3964a7; /* إطار الدائرة */
+  position: absolute;
+  top: 180px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: white;
+  margin-bottom: 10px;
+}
+@media (max-width: 500px) {
+  .doctor-photo{
+    width: 150px; 
+    height: 150px;
+  }
+  .doctor-info{
+           /*margin-top:170px;*/
+     /* padding-top: 100px */
+  }
+  .dr-img{
+ width: 150px;
+ height: 150px; 
+}
+}
